@@ -6,8 +6,8 @@ iqmtag hand.R tag_weapon 0.1 -0.9 0.1 -90 0 -90
 iqmtag ribs tag_bjet 0 0.4 2 
 iqmtag shin.L.02 tag_ljet 0 -1.6 1.6
 iqmtag shin.R.02 tag_rjet 0 -1.6 1.6
-iqmtag head tag_head 0 0.3 -0.2
-iqmtag spine tag_torso 0 0 0
+iqmtag head tag_head 0 -0.65 0.5
+iqmtag spine tag_torso 0 -1.7 -0.5
 iqmtag hips tag_waist 0 1 2
 
 if 1 [
