@@ -294,16 +294,16 @@ WEAPON(plasma,      0x44DDCC,       0x44DDCC,       0x44DDCC,       0x44DDCC,   
     0.9f,   1.2f,   0.9f,   0.9f
 );
 WEAPON(rifle,       0x6622AA,       0x6622AA,       0x6622AA,       0x6622AA,       0x6622AA,
-    5,      5,      1,      1,      750,    1000,   1750,   32,     150,    5000,   100000, 0,      0,      5000,   5000,
-    0,      0,      0,      0,      200,    200,    30,     0,      1,      1,      1,      0,      0,      0,      0,      0,
+    5,      5,      1,      1,      750,    1000,   1750,   35,     150,    5000,   100000, 0,      0,      5000,   5000,
+    0,      0,      0,      0,      200,    200,    36,     0,      1,      1,      1,      0,      0,      0,      0,      0,
     0,      0,      40,     40,     -1,             -1,             18,     50,     5,      5,      500,    500,    0,      0,
     IMPACT_GEOM|IMPACT_PLAYER|IMPACT_SHOTS|COLLIDE_OWNER|COLLIDE_TRACE,
     IMPACT_GEOM|IMPACT_PLAYER|IMPACT_SHOTS|COLLIDE_TRACE|COLLIDE_CONT,
     2,      2,      0,      0,      0,      0,      0,      0,      0,      0,      1,      1,      1,      0,      0,
     2,      0,      0,      0,      75,     50,     100,
     0,      0,      0,      0,      0.5f,   0.5f,   0,      0,      1,      0,      2,      2,      0,      0,      1,      1,
-    20,     10,     100,    200,    1,      2,      768,    2048,   1.5f,   3,      256,    512,    1,      1.25f,  0.25f,  0.75f,
-    2,      1024,   2,      10,     10,     1,      1,      4,      4,      0.6f,   0.75f,  0.4f,   0.5f,   0.2f,   0.25f,  0.5f,   0.5f,
+    20,     10,     200,    300,    1,      2,      768,    2048,   1.5f,   3,      256,    512,    1,      1.5f,   0.25f,  0.75f,
+    2,      1024,   2,      10,     10,     1,      1,      4,      4,      0.75f,  0.75f,  0.5f,   0.5f,   0.3f,   0.3f,   0.5f,   0.5f,
     1,      1,      0.25f,  0.25f,  1,      1,      0,      0,      8,      8,      1,      1,
     IMPACT_GEOM|IMPACT_PLAYER|IMPACT_SHOTS|COLLIDE_OWNER|COLLIDE_TRACE,
     IMPACT_GEOM|IMPACT_PLAYER|IMPACT_SHOTS|COLLIDE_TRACE|COLLIDE_CONT,
